Update to Play 2.6.6 and fix tests (#31)
* Fix uri check

* Update to play 2.6.6